[workspace]
members = ["crates/reatls-hpke", "crates/reatls-hpke-crypto"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
authors = ["Hantong Chen <cxwdyx620@gmail.com>", "Franziskus Kiefer <franziskuskiefer@gmail.com>"]
categories = ["cryptography"]
keywords = ["HPKE"]
license = "MPL-2.0"
repository = "https://github.com/hanyu-dev/reatls-hpke"

[profile.dev]
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
panic = "unwind"
strip = true
