[package]
name = "hpke-crypto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description = """
RFC 9180 Hybrid Public Key Encryption (HPKE) implementation in Rust.
"""
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
aead = { version = "=0.6.0-rc.3", default-features = false, optional = true }
aes-gcm = { version = "=0.11.0-rc.2", default-features = false, features = ["aes"], optional = true }
aws-lc-rs = { version = "1.14", optional = true }
chacha20poly1305 = { version = "=0.11.0-rc.2", default-features = false, features = ["alloc"], optional = true }
const-hex = { version = "1.16", default-features = false, features = ["alloc"] }
crypto-bigint = { version = "=0.7.0-rc.9", default-features = false }
elliptic-curve = { version = "=0.14.0-rc.16", default-features = false, optional = true }
graviola = { version = "0.3.0", optional = true }
hkdf = { version = "=0.13.0-rc.2", optional = true }
hmac = { version = "=0.13.0-rc.2", optional = true }
p256 = { version = "=0.14.0-rc.0", default-features = false, features = ["arithmetic", "ecdh"], optional = true }
p384 = { version = "=0.14.0-rc.0", default-features = false, features = ["arithmetic", "ecdh"], optional = true }
p521 = { version = "=0.14.0-rc.0", default-features = false, features = ["arithmetic", "ecdh"], optional = true }
rand_chacha = { version = "0.9.0", features = ["os_rng"], optional = true }
ring = { version = "0.17.14", optional = true }
serde = { version = "1.0", optional = true, default-features = false }
sha2 = { version = "=0.11.0-rc.3", default-features = false, optional = true }
smallvec = "2.0.0-alpha.11"
subtle = { version = "2.6", default-features = false }
wrapper-lite = "0.3.0"
x25519-dalek = { version = "3.0.0-pre.1", features = ["static_secrets"], optional = true }
zeroize = "1.8"
zeroize_derive = "1.4"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
quanta = "0.12.6"
hpke-crypto = { path = ".", features = [
    "std",
    "hazmat",
    "backend-rustcrypto",
    "backend-graviola",
    "backend-ring",
    "backend-aws-lc-rs",
    "serde",
] }
test-case = "3.3"

[features]
default = []

# Enable std support
std = []

# Enable some hazmat APIs or behaviours
hazmat = []

# Crypto backend (internal marker)
_backend = []

# Crypto backend: RustCrypto
backend-rustcrypto = [
    "_backend",
    "std",
    "dep:aead",
    "dep:aes-gcm",
    "dep:chacha20poly1305",
    "dep:elliptic-curve",
    "dep:hkdf",
    "dep:hmac",
    "dep:x25519-dalek",
    "dep:p256",
    "dep:p384",
    "dep:p521",
    "dep:rand_chacha",
    "dep:sha2",
]

# Crypto backend: Graviola
backend-graviola = ["_backend", "std", "dep:graviola"]

# Crypto backend: Ring
backend-ring = ["_backend", "dep:ring", "dep:rand_chacha", "dep:x25519-dalek"]

# Crypto backend: AWS-LC-RS
backend-aws-lc-rs = ["_backend", "dep:aws-lc-rs", "dep:rand_chacha", "dep:x25519-dalek"]

# Enable serialization support via serde
serde = ["dep:serde"]

[[bench]]
name = "bench_aead"
harness = false
path = "benches/bench_aead.rs"

# [[bench]]
# name = "bench_dh"
# harness = false
# path = "benches/bench_dh.rs"

# [[bench]]
# name = "bench_kdf"
# harness = false
# path = "benches/bench_kdf.rs"

# [[bench]]
# name = "bench_kem"
# harness = false
# path = "benches/bench_kem.rs"
